[gd_scene load_steps=5 format=3 uid="uid://bwlkhphaedwsi"]

[ext_resource type="Script" uid="uid://r45t70o3sw4e" path="res://script/item.gd" id="1_s8enn"]
[ext_resource type="Texture2D" uid="uid://ckccqrty5vx0a" path="res://assets/fire_orb.png" id="2_s8enn"]
[ext_resource type="Texture2D" uid="uid://c7ivkfp7bkv6w" path="res://assets/frame_card.png" id="3_6muww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gq7n"]
size = Vector2(98.5, 105)

[node name="Item" type="Node2D"]
script = ExtResource("1_s8enn")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -90.0
offset_top = -84.0
offset_right = 101.0
offset_bottom = 194.0
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_s8enn")

[node name="Area2D" type="Area2D" parent="."]
z_index = 3
position = Vector2(-3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4gq7n")

[node name="FrameCard" type="Sprite2D" parent="."]
position = Vector2(3.00001, 51)
scale = Vector2(0.324425, 0.324425)
texture = ExtResource("3_6muww")

[node name="NameLabel" type="Label" parent="."]
offset_left = -26.0
offset_top = 70.0
offset_right = 21.0
offset_bottom = 93.0
text = "Name"

[node name="EffectLabel" type="Label" parent="."]
offset_left = -75.0
offset_top = 107.0
offset_right = 75.0
offset_bottom = 130.0
text = "DO Something Cool"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
